Bug 409608 Tidy up nsAbAddressCollecter and add some more tests. r/sr=Neil, also fixes bug 65635 Shouldn't collect people without email address